--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html dir="rtl" lang="fa">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ghalam.png" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>Vite + React</title>
+    <title>قلم</title>
   </head>
   <body>
     <div id="root"></div>
